Ajuste al modulo de publicacion y seleccion
Se crearon endpoints de interes para:
Obtener publicacion por id
Obtener integrantes por seleccion